fix: layout issue

--- a/frontend/src/component/Table/Table.css
+++ b/frontend/src/component/Table/Table.css
@@ -1,11 +1,9 @@
-.table {
-  padding: 24px 0px;
-}
-
 .table__header {
   width: 100%;
   display: flex;
   background-color: rgba(255, 255, 255, 1);
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
 }
 
 .table__header-item {
