--- a/frontend/src/pages/BookingPage/BookingPage.css
+++ b/frontend/src/pages/BookingPage/BookingPage.css
@@ -108,10 +108,11 @@
   display: flex;
   gap: 16px;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .booking-main__current-booking-item {
-  width: 283px;
+  min-width: 283px;
   height: 260px;
   flex-grow: 0;
   background-color: rgba(255, 255, 255, 1);
