--- a/frontend/src/pages/HistoryPage/HistoryPage.css
+++ b/frontend/src/pages/HistoryPage/HistoryPage.css
@@ -5,7 +5,7 @@
 .history__container {
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  gap: 24px;
 }
 
 .history__container h4 {
@@ -13,4 +13,5 @@
   font-size: 24px;
   line-height: 28px;
   letter-spacing: 0.1px;
+  margin-bottom: 8px;
 }
